; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_652.c_find_xor.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_652.c_find_xor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_xor(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 49, i32* %8, align 4
  store i32 49, i32* %9, align 4
  store i32 49, i32* %8, align 4
  br label %10

10:                                               ; preds = %39, %3
  %11 = load i32, i32* %8, align 4
  %12 = icmp slt i32 %11, 255
  br i1 %12, label %13, label %42

13:                                               ; preds = %10
  store i32 49, i32* %9, align 4
  br label %14

14:                                               ; preds = %35, %13
  %15 = load i32, i32* %9, align 4
  %16 = icmp slt i32 %15, 255
  br i1 %16, label %17, label %38

17:                                               ; preds = %14
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = xor i32 %19, %20
  %22 = icmp eq i32 %18, %21
  br i1 %22, label %23, label %34

23:                                               ; preds = %17
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @put_ip(i32 %24, i32 %25)
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @put_xor(i32 %27, i32 %28, i32 %29)
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %4, align 4
  br label %43

34:                                               ; preds = %17
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %9, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %9, align 4
  br label %14

38:                                               ; preds = %14
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %8, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %8, align 4
  br label %10

42:                                               ; preds = %10
  store i32 -1, i32* %4, align 4
  br label %43

43:                                               ; preds = %42, %23
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @put_ip(i32, i32) #1

declare dso_local i32 @put_xor(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
